css/style.css
@import url('https://fonts.googleapis.com/css2?family=Meow+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Delius+Unicase:wght@400;700&family=Meow+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');


/* RESET RULES*/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

ul,
ol {
    list-style: none;
}

a {
    color: currentColor;
    text-decoration: none;
}

img {
    width: 100%;
}

html {
    background-image: url("../img/cork.png");
}

/* HEADER */

.header-container {
    background-image: url("../img/wall.png");
    text-align: center;
    align-content: center;
    height: 150px;
}

.header-container h1 {
    font-size: 80px;
    font-family: "Delius Unicase", cursive;
    font-weight: bold;
    font-style: italic;
}

/* MAIN */

.container {
    max-width: 1024px;
    margin: 0 auto;
    padding-top: 35px;
}

.row {
    display: flex;
    flex-wrap: wrap;
    gap: 35px 0;

}

.row>* {
    padding: 0 20px;
    padding-bottom: 20px;
}

.card {
    background-color: white;
    padding: 20px;
    position: relative;

}

.col {
    width: calc(100% / 3);
    display: flex;
}

.card-img {
    width: 100%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    object-position: center;
}

.card-text {
    font-family: "Meow Script", cursive;
    font-weight: 400;
    font-style: normal;
    font-size: 28px;
    padding-top: 10px;
}

.pin {
    width: 35px;
    position: absolute;
    top: -15px;
    left: 45%;
}

.overlay-container {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;

}

.overlay-bg {
    background-color: black;
    opacity: 0.7;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.overlay-content {
    position: relative;
    z-index: 1;
    opacity: 1;
    margin: 30px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.overlay-content img {
    width: 100%;
    max-width: 500px;
}

.d-none {
    display: none;
}

button {
    display: block;
    margin-bottom: 30px;
    padding: 0 10px;
    font-size: medium;

}



@media (max-width: 768px) {

    .col {
        width: calc(100% / 2);
    }

    .header-container h1 {
        font-size: 75px;
    }

    .container {
        max-width: 650px;
        margin: 0 auto;
        padding-top: 35px;
    }
}


@media (max-width: 576px) {

    .col {
        width: 100%;
    }

    .container {
        max-width: 420px;
        margin: 0 auto;
        padding-top: 35px;
    }
}

